# xshim

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: context.rs  env.rs  main.rs  utils.rs
crates/cli/src/systemd/: journald.rs  notify.rs
crates/cli/src/systemd/dbus/: environment.rs  logind.rs  mod.rs
crates/xshim/: Cargo.toml
crates/xshim/src/: env.rs  lib.rs  utils.rs  xrdb.rs
crates/xshim/src/xauthority/: encoding.rs  file.rs  mod.rs
src/: context.rs  env_definitions.rs  environment.rs  error.rs  main.rs  runtime_dir.rs  utils.rs
src/frame/: environment.rs  mod.rs
src/systemd/: journald.rs  mod.rs  notify.rs  socket_activation.rs
src/systemd/dbus/: environment.rs  logind.rs
src/xauthority/: encoding.rs  file.rs  mod.rs
