[package]
name = "xshim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argh = { version = "0.1.16", default-features = false, features = ["help"] }
binrw = "0.15.1"
rustix = { version = "1.1.4", features = ["fs", "process", "rand", "system"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
