[package]
name = "xshim"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1.16", default-features = false, features = ["help"] }
binrw = "0.15.1"
enum_dispatch = "0.3.13"
envy = { git = "https://github.com/hazyfossa/envy.git", version = "0.1.0" }
freedesktop-session-parser = { git = "https://github.com/hazyfossa/freedesktop-session-parser", version = "0.1.0", optional = true }
rustix = { version = "1.1.4", features = [
    "fs",
    "net",
    "process",
    "rand",
    "system",
] }
snafu = "0.9.0"
zeroize = { version = "1.8.2", features = ["derive"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
session = []
freedesktop-session-parser = ["dep:freedesktop-session-parser"]
