[package]
name = "xshim-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1.16", default-features = false, features = ["help"] }
enum_dispatch = "0.3.13"
envy = { git = "https://github.com/hazyfossa/envy.git", version = "0.1.0" }
eyre = "0.6.12"
simple-eyre = "0.3.1"
freedesktop-session-parser = { git = "https://github.com/hazyfossa/freedesktop-session-parser", version = "0.1.0" }
rustix = { version = "1.1.4", features = ["fs"] }
tokio = { version = "1.50.0", features = ["rt", "macros"] }
xshim = { version = "0.1.0", path = "../xshim" }
zbus = { version = "5.14.0", default-features = false, features = [
    "tokio",
], optional = true }

[features]
default = ["dbus"]
dbus = ["dep:zbus"]
